Update certification links to point to Credly badges

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
     <section id="certifications">
       <h2>Certifications</h2>
       <ul>
-        <li>AWS Certified DevOps Engineer – Professional (2024).</li>
-        <li>Red Hat Certified Specialist in Containers (2024).</li>
-        <li>AWS Certified Solutions Architect – Associate (2022).</li>
-        <li>AWS Certified Cloud Practitioner (2021).</li>
+        <li><a href="https://www.credly.com/badges/47c4ebe8-278b-4a7b-8d5b-156c5dc021f1/public_url">AWS Certified DevOps Engineer – Professional (2024)</a>.</li>
+        <li><a href="https://www.credly.com/badges/578071ea-18cd-44a7-910c-8d0f69decb25/public_url">Red Hat Certified Specialist in Containers (2024)</a>.</li>
+        <li><a href="https://www.credly.com/badges/2415afa1-75c7-4dd5-965e-8d1ae72ca009/public_url">AWS Certified Solutions Architect – Associate (2022)</a>.</li>
+        <li><a href="https://www.credly.com/badges/99b1bb8a-27a4-49ac-b65e-58bce49bf458/public_url">AWS Certified Cloud Practitioner (2021)</a>.</li>
       </ul>
     </section>
 
