Enhance resume content for clarity and professionalism

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section id="summary">
       <h2>Professional Summary</h2>
-      <p>Accomplished Technical Director with deep technical expertise in DevOps, AWS and cloud-native infrastructure, coupled with strong business acumen. Demonstrated success in leading and scaling high-performing teams, driving profitability through efficient delivery and outcome-focused strategies. Open to discussing new opportunities where I can leverage my technical leadership and commercial savvy to create impactful solutions.</p>
+      <p>Accomplished <strong>Technical Director</strong> with deep technical expertise in <strong>DevOps</strong>, <strong>AWS</strong> and cloud-native infrastructure, coupled with strong business acumen. Demonstrated success in leading and scaling high-performing teams, driving profitability through efficient delivery and outcome-focused strategies. Open to discussing new opportunities where I can leverage my technical leadership and commercial savvy to create impactful solutions.</p>
     </section>
 
     <section id="employment">
@@ -49,7 +49,6 @@
           <li>Conduct monthly technical health assessments to maintain system reliability and performance.</li>
           <li>Act as the primary escalation point for technical issues, ensuring timely and effective resolutions.</li>
           <li>Drive project transformation initiatives to optimise delivery processes and improve outcomes.</li>
-          <li>Balance technical solutions with financial considerations to maintain project feasibility.</li>
         </ul>
       </div>
 
@@ -57,11 +56,10 @@
         <h3>DevOps Engineer, IBM <span class="date">Jul 2019 – Dec 2024</span></h3>
         <p>In my role as a DevOps Engineer at IBM, I specialised in designing, implementing, and managing robust cloud-native infrastructures, primarily using AWS. I played a key role in automating deployment processes and improving overall delivery speed and reliability.</p>
         <ul>
-          <li>Built scalable, resilient systems using AWS services such as EC2, Lambda, CloudFormation, CloudWatch, and CodePipeline.</li>
-          <li>Implemented and maintained containerised applications with Kubernetes and Red Hat OpenShift for orchestration and automation.</li>
-          <li>Developed advanced CI/CD pipelines with Jenkins and GitLab to streamline deployments.</li>
-          <li>Monitored system performance, implemented proactive solutions to maintain high availability, and resolved production issues.</li>
-          <li>Provided technical guidance and mentorship, promoting best practices in cloud security, IaC, and agile methodologies.</li>
+          <li>Built scalable AWS infrastructures (EC2, Lambda, CloudFormation).</li>
+          <li>Managed containerised applications with Kubernetes and OpenShift.</li>
+          <li>Developed CI/CD pipelines with Jenkins and GitLab.</li>
+          <li>Monitored system performance and maintained high availability.</li>
         </ul>
       </div>
 
@@ -69,11 +67,10 @@
         <h3>Software Engineer, BT <span class="date">Sep 2013 – Jul 2019</span></h3>
         <p>As a Software Engineer at BT, I was responsible for refreshing and dockerising a legacy system deployed globally. This involved developing new microservices, orchestrating communication, and managing containerised deployments.</p>
         <ul>
-          <li>Wrote services in Python and set them up as microservices.</li>
-          <li>Integrated services using a Qpid message broker to improve communication efficiency.</li>
-          <li>Containerised applications with Docker and managed orchestration through Rancher.</li>
-          <li>Collaborated with cross-functional teams to troubleshoot and optimise system performance.</li>
-          <li>Adopted Agile methodologies to deliver updates and features iteratively.</li>
+          <li>Developed Python microservices.</li>
+          <li>Integrated services via Qpid message broker.</li>
+          <li>Containerised applications with Docker and Rancher.</li>
+          <li>Troubleshot and optimised system performance.</li>
         </ul>
       </div>
     </section>
@@ -83,7 +80,7 @@
       <h3>Cloud & DevOps</h3>
       <ul>
         <li>DevOps (Docker, Kubernetes, Puppet).</li>
-        <li>AWS Cloud Architecture & Services (EC2, Lambda, CloudFormation, CloudWatch, CodePipeline).</li>
+        <li>AWS Cloud Architecture (EC2, Lambda, CloudFormation, CloudWatch, CodePipeline).</li>
         <li>Infrastructure as Code (Terraform, CloudFormation).</li>
       </ul>
       <h3>Automation & CI/CD</h3>
@@ -113,7 +110,7 @@
           <li>Software Project Management with Agile Techniques and SCRUM.</li>
           <li>Data Mining.</li>
         </ul>
-        <p><strong>Final Year Project:</strong> Developed an online system for the School of Engineering to manage final year projects, including advertising potential projects, allocating projects to students, and delivering project grades.</p>
+        <p><strong>Final Year Project:</strong> Developed an online system for the School of Engineering to manage their final year projects, including advertising potential projects, allocating those projects to students, and delivering project grades.</p>
       </div>
     </section>
 
@@ -129,9 +126,9 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p><i class="fa fa-envelope"></i> <a href="mailto:ben@humphreysnewman.co.uk">ben@humphreysnewman.co.uk</a>.</p>
-      <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ben-humphreys-newman/">linkedin.com/in/ben-humphreys-newman</a>.</p>
-      <p><i class="fab fa-github"></i> <a href="https://github.com/ben-newman10">github.com/ben-newman10</a>.</p>
+      <p><i class="fa fa-envelope"></i> <a href="mailto:ben@humphreysnewman.co.uk">ben@humphreysnewman.co.uk</a></p>
+      <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ben-humphreys-newman/">linkedin.com/in/ben-humphreys-newman</a></p>
+      <p><i class="fab fa-github"></i> <a href="https://github.com/ben-newman10">github.com/ben-newman10</a></p>
     </section>
   </div>
 </body>
