Refactor Open Graph description for clarity; adjust print styles for better formatting

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ben Humphreys-Newman – Technical Director</title>
   <meta name="description" content="Ben Humphreys-Newman, Technical Director specialising in DevOps and AWS, with 10+ years’ experience delivering secure, cost-efficient cloud solutions and leading high-performing teams." />
   <meta name="keywords" content="Technical Director, DevOps, AWS, Cloud Solutions, Leadership, CI/CD, Infrastructure as Code" />
   <meta property="og:title" content="Ben Humphreys-Newman – Technical Director" />
-  <meta property="og:description" content="Experienced Technical Director with expertise in DevOps, AWS and cloud-native infrastructure. Proven leader in delivering high-availability solutions and optimising delivery processes." />
+  <meta property="og:description" content="Experienced Technical Director with expertise in DevOps, AWS and cloud-native infrastructure." />
   <meta property="og:type" content="website" />
   <link rel="canonical" href="https://yourwebsite.com/" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
@@ -56,7 +56,7 @@
     #contact a { color: #006699; text-decoration: none; }
     #contact a:hover { text-decoration: underline; }
     @media print {
-      body { background: #fff; }
+      body { background: #fff; zoom: 75%; }
       .skip-link, nav, .print-button, footer { display: none !important; }
       main.container { box-shadow: none; margin: 0; padding: 0; }
       @page { size: A4; margin: 1cm; }
