Update print button label for clarity; include PDF saving option

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <p class="tagline">Technical Director at IBM | DevOps & AWS Specialist</p>
     </header>
     <div class="print-button">
-      <button type="button" onclick="printResume()" aria-label="Print friendly version of resume">Print Friendly</button>
+      <button type="button" onclick="printResume()" aria-label="Print and save as PDF"><i class="fa fa-download" aria-hidden="true"></i> Print & Save as PDF</button>
     </div>
     <nav aria-label="Section navigation">
       <ul>
